[package]
name = "sneslib"
version = "0.1.0"
authors = ["hal <forarslys@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
serde = { version = "1.0.117", features = ["derive"] }

[dev-dependencies]
bincode = "1.3.1"
